--- a/toronto_code/2019_toronto_travel_times.Rmd
+++ b/toronto_code/2019_toronto_travel_times.Rmd
@@ -4,6 +4,11 @@ output: html_notebook
 ---
 
 ```{r}
+
+rm(list = ls())
+
+options(java.parameters = "-Xmx8000m")
+
 library(r5r)
 library(sf)
 library(r5r)
@@ -11,49 +16,54 @@ library(sf)
 library(data.table)
 library(ggplot2)
 
-options(java.parameters = "-Xmx2G")
 
 #OSM from BBBike
 #GTFS from transitfeeds.com
-r5r_core <- setup_r5(data_path =  '/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/2019_routing/r5r_core', verbose = FALSE)
+r5r_core <- setup_r5(data_path =  '/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2019_region_routing/r5_graph2019', verbose = FALSE)
 ```
 
+```{r}
+r5r_core
+```
 
 ```{r}
-DA_centroids <- st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/toronto_shapes/DA_centroids/DA_centroids.csv")
+DA_centroids <- st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/toronto_shapes/DA_centroids/DA_centroids.csv")
 
 DA_centroids$lon <- as.numeric(as.character(DA_centroids$lon))
 DA_centroids$lat <- as.numeric(as.character(DA_centroids$lat))
 
 ```
 
-
-
+![]()
 
 ```{r}
-clinic_points = st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/clinic_data/toronto/clinics_for_routing/clinics_for_routing.csv")
+clinic_points = st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/clinics_for_routing/clinics_for_routing_v2.csv")
 
 clinic_points$lon <- as.numeric(as.character(clinic_points$lon))
 clinic_points$lat <- as.numeric(as.character(clinic_points$lat))
+
+
 ```
+
 
 
 ```{r}
 # set inputs
-mode <- c("WALK")
+mode <- c("WALK", "TRANSIT", "WALK")
 max_walk_dist <- 10000
 max_trip_duration <- 120
-departure_time<- as.POSIXct("26-06-2019 9:00:00", format = "%d-%m-%Y %H:%M:%S")
+departure_time<- as.POSIXct("19-06-2019 8:00:00", format = "%d-%m-%Y %H:%M:%S")
 
 # calculate a travel time matrix
-ttm2 <- travel_time_matrix(r5r_core = r5r_core,
+ttm0900_2 <- travel_time_matrix(r5r_core = r5r_core,
                           origins = DA_centroids,
                           destinations = clinic_points,
                           departure_datetime = departure_time,
                           mode = mode,
                           max_rides = 10,
-                          max_walk_dist = 10000,
+                          max_walk_dist = max_walk_dist,
                           max_trip_duration = max_trip_duration,
+                          time_window = 60,
                           verbose = FALSE)
 
 
@@ -61,14 +71,17 @@ ttm2 <- travel_time_matrix(r5r_core = r5r_core,
 
 
 
+```{r}
+cens = st_write(ttm0900, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2019_region_routing/data/travel_times/19_06_2019_0900_2.csv")
 
+```
 
 ```{r}
 # set inputs
-mode <- c("WALK", "TRANSIT")
+mode <- c("WALK", "TRANSIT", "WALK")
 max_walk_dist <- 10000
 max_trip_duration <- 120
-departure_time<- as.POSIXct("26-06-2019 12:00:00", format = "%d-%m-%Y %H:%M:%S")
+departure_time<- as.POSIXct("19-06-2019 11:00:00", format = "%d-%m-%Y %H:%M:%S")
 
 # calculate a travel time matrix
 ttm1200 <- travel_time_matrix(r5r_core = r5r_core,
@@ -77,8 +90,9 @@ ttm1200 <- travel_time_matrix(r5r_core = r5r_core,
                           departure_datetime = departure_time,
                           mode = mode,
                           max_rides = 10,
-                          max_walk_dist = 10000,
+                          max_walk_dist = max_walk_dist,
                           max_trip_duration = max_trip_duration,
+                          time_window = 60,
                           verbose = FALSE)
 
 
@@ -87,37 +101,61 @@ ttm1200 <- travel_time_matrix(r5r_core = r5r_core,
 
 
 ```{r}
-cens = st_write(ttm1200, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/2019_routing/travel_times/26_06_2019_1200.csv")
+cens = st_write(ttm1200, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2019_region_routing/data/travel_times/19_06_2019_1100_2.csv")
 
 ```
 
-
 ```{r}
 # set inputs
-mode <- c("WALK", "TRANSIT")
+mode <- c("WALK", "TRANSIT", "WALK")
 max_walk_dist <- 10000
 max_trip_duration <- 120
-departure_time<- as.POSIXct("26-06-2019 14:00:00", format = "%d-%m-%Y %H:%M:%S")
+departure_time<- as.POSIXct("19-06-2019 15:00:00", format = "%d-%m-%Y %H:%M:%S")
 
 # calculate a travel time matrix
-ttm1400 <- travel_time_matrix(r5r_core = r5r_core,
+ttm1500 <- travel_time_matrix(r5r_core = r5r_core,
                           origins = DA_centroids,
                           destinations = clinic_points,
                           departure_datetime = departure_time,
                           mode = mode,
                           max_rides = 10,
-                          max_walk_dist = 10000,
+                          max_walk_dist = max_walk_dist,
                           max_trip_duration = max_trip_duration,
+                          time_window = 60,
+                          verbose = FALSE)
+
+
+```
+
+```{r}
+cens = st_write(ttm1500, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2019_region_routing/data/travel_times/19_06_2019_1500_2.csv")
+```
+
+
+```{r}
+# set inputs
+mode <- c("WALK", "TRANSIT", "WALK")
+max_walk_dist <- 10000
+max_trip_duration <- 120
+departure_time<- as.POSIXct("22-06-2019 09:00:00", format = "%d-%m-%Y %H:%M:%S")
+
+# calculate a travel time matrix
+ttm0900_sat <- travel_time_matrix(r5r_core = r5r_core,
+                          origins = DA_centroids,
+                          destinations = clinic_points,
+                          departure_datetime = departure_time,
+                          mode = mode,
+                          max_rides = 10,
+                          max_walk_dist = max_walk_dist,
+                          max_trip_duration = max_trip_duration,
+                          time_window = 60,
                           verbose = FALSE)
 
 
 ```
 
 
-
-
 ```{r}
-cens = st_write(ttm1400, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/2019_routing/travel_times/26_06_2019_1400.csv")
-
+cens = st_write(ttm0900_sat, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2019_region_routing/data/travel_times/22_06_2019_0900_2.csv")
 ```
 
