--- a/toronto_code/2020_toronto_travel_times.Rmd
+++ b/toronto_code/2020_toronto_travel_times.Rmd
@@ -4,6 +4,11 @@ output: html_notebook
 ---
 
 ```{r}
+
+rm(list = ls())
+
+options(java.parameters = "-Xmx8000m")
+
 library(r5r)
 library(sf)
 library(r5r)
@@ -11,16 +16,16 @@ library(sf)
 library(data.table)
 library(ggplot2)
 
-options(java.parameters = "-Xmx2G")
 
 #OSM from BBBike
 #GTFS from transitfeeds.com
-r5r_core <- setup_r5(data_path =  '/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/2020_routing/r5r_core', verbose = FALSE)
+r5r_core <- setup_r5(data_path =  '/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2020_region_routing/r5_graph2020', verbose = FALSE)
+
 ```
 
 
 ```{r}
-DA_centroids <- st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/toronto_shapes/DA_centroids/DA_centroids.csv")
+DA_centroids <- st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/toronto_shapes/DA_centroids/DA_centroids.csv")
 
 DA_centroids$lon <- as.numeric(as.character(DA_centroids$lon))
 DA_centroids$lat <- as.numeric(as.character(DA_centroids$lat))
@@ -31,87 +36,136 @@ DA_centroids$lat <- as.numeric(as.character(DA_centroids$lat))
 
 
 ```{r}
-clinic_points = st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/clinic_data/toronto/clinics_for_routing/clinics_for_routing.csv")
+clinic_points = st_read("/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/clinics_for_routing/clinics_for_routing_v2.csv")
 
 clinic_points$lon <- as.numeric(as.character(clinic_points$lon))
 clinic_points$lat <- as.numeric(as.character(clinic_points$lat))
+
 ```
 
 
 ```{r}
 # set inputs
-mode <- c("WALK", "TRANSIT")
+mode <- c("WALK", "TRANSIT", "WALK")
 max_walk_dist <- 10000
-max_trip_duration <- 10000
-departure_time<- as.POSIXct("24-06-2020 9:00:00", format = "%d-%m-%Y %H:%M:%S")
+max_trip_duration <- 120
+departure_time<- as.POSIXct("24-06-2020 8:00:00", format = "%d-%m-%Y %H:%M:%S")
 
 # calculate a travel time matrix
-ttm900 <- travel_time_matrix(r5r_core = r5r_core,
+ttm0800_2 <- travel_time_matrix(r5r_core = r5r_core,
                           origins = DA_centroids,
                           destinations = clinic_points,
                           departure_datetime = departure_time,
                           mode = mode,
                           max_rides = 10,
-                          max_walk_dist = 10000,
+                          max_walk_dist = max_walk_dist,
+                          max_trip_duration = max_trip_duration,
+                          time_window = 60,
                           verbose = FALSE)
 
-ccm
 ```
 
 
 ```{r}
-cens = st_write(ttm900, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/2020_routing/travel_times/2020/24_06_2020_900.csv")
+ttm0800_2
+```
+
+
+
+```{r}
+cens = st_write(ttm0800_2, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2020_region_routing/data/travel_times/24_06_2020_0800.csv")
 
 ```
 
 ```{r}
 # set inputs
-mode <- c("WALK", "TRANSIT")
+mode <- c("WALK", "TRANSIT", "WALK")
 max_walk_dist <- 10000
-max_trip_duration <- 10000
-departure_time<- as.POSIXct("24-06-2020 12:00:00", format = "%d-%m-%Y %H:%M:%S")
+max_trip_duration <- 120
+departure_time<- as.POSIXct("24-06-2020 11:00:00", format = "%d-%m-%Y %H:%M:%S")
 
 # calculate a travel time matrix
-ttm1200 <- travel_time_matrix(r5r_core = r5r_core,
+ttm1100_2 <- travel_time_matrix(r5r_core = r5r_core,
                           origins = DA_centroids,
                           destinations = clinic_points,
                           departure_datetime = departure_time,
                           mode = mode,
                           max_rides = 10,
-                          max_walk_dist = 10000,
+                          max_walk_dist = max_walk_dist,
+                          max_trip_duration = max_trip_duration,
+                          time_window = 60,
                           verbose = FALSE)
-
-ttm1200
 ```
 
 
 ```{r}
-cens = st_write(ttm1200, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/2020_routing/travel_times/24_06_2020_1200.csv")
+cens = st_write(ttm1100_2, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2020_region_routing/data/travel_times/24_06_2020_1100.csv")
 
 ```
 
 ```{r}
 # set inputs
-mode <- c("WALK", "TRANSIT")
+mode <- c("WALK", "TRANSIT", "WALK")
 max_walk_dist <- 10000
-max_trip_duration <- 10000
-departure_time<- as.POSIXct("24-06-2020 14:00:00", format = "%d-%m-%Y %H:%M:%S")
+max_trip_duration <- 120
+departure_time<- as.POSIXct("24-06-2020 15:00:00", format = "%d-%m-%Y %H:%M:%S")
 
 # calculate a travel time matrix
-ttm1400 <- travel_time_matrix(r5r_core = r5r_core,
+ttm1100_2 <- travel_time_matrix(r5r_core = r5r_core,
                           origins = DA_centroids,
                           destinations = clinic_points,
                           departure_datetime = departure_time,
                           mode = mode,
                           max_rides = 10,
-                          max_walk_dist = 10000,
+                          max_walk_dist = max_walk_dist,
+                          max_trip_duration = max_trip_duration,
+                          time_window = 60,
                           verbose = FALSE)
 
-ccm
 ```
 
 
 ```{r}
-cens = st_write(ttm1400, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/project/project_dir/data/toronto_data/2020_routing/travel_times/24_06_2020_1400.csv")
+cens = st_write(ttm1100_2, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2020_region_routing/data/travel_times/24_06_2020_1500.csv")
+
+```
+
+```{r}
+# set inputs
+mode <- c("WALK", "TRANSIT", "WALK")
+max_walk_dist <- 10000
+max_trip_duration <- 120
+departure_time<- as.POSIXct("27-06-2020 09:00:00", format = "%d-%m-%Y %H:%M:%S")
+
+# calculate a travel time matrix
+ttm0900_1 <- travel_time_matrix(r5r_core = r5r_core,
+                          origins = DA_centroids,
+                          destinations = clinic_points,
+                          departure_datetime = departure_time,
+                          mode = mode,
+                          max_rides = 10,
+                          max_walk_dist = max_walk_dist,
+                          max_trip_duration = max_trip_duration,
+                          time_window = 60,
+                          verbose = FALSE)
+
+```
+
+
+```{r}
+ttm0900_1
+```
+
+
+```{r}
+ttm0900_1
+```
+
+```{r}
+ttm0900_1
+```
+
+```{r}
+cens = st_write(ttm0900_1, "/Users/shivyucel/Documents/projects.nosync/opioid_accessibility/opioid_accessibility/data/toronto_data/2020_region_routing/data/travel_times/27_06_2020_0900.csv")
 
 ```
