--- a/toronto_code/4_toronto_census_centroids.ipynb
+++ b/toronto_code/4_toronto_census_centroids.ipynb
@@ -89,7 +89,7 @@
    "hash": "3000151dad639a5b884f482d55293518d422e78d7667ef7f9f66f3633cb45ad0"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('geo_env')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -104,9 +104,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.4"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
