--- a/toronto_code/1.5_toronto_census_centroids.ipynb
+++ b/toronto_code/1.5_toronto_census_centroids.ipynb
@@ -89,7 +89,7 @@
    "hash": "3000151dad639a5b884f482d55293518d422e78d7667ef7f9f66f3633cb45ad0"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -103,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
