--- a/toronto_code/1.7_travel_times_income.ipynb
+++ b/toronto_code/1.7_travel_times_income.ipynb
@@ -1488,7 +1488,7 @@
    "hash": "3000151dad639a5b884f482d55293518d422e78d7667ef7f9f66f3633cb45ad0"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1502,7 +1502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
